# kafka-payment-processor

./: .gitignore  README.md
backend/: Gemfile  karafka.rb
backend/app/consumers/: PaymentReceivedConsumer.rb  payment_processed_consumer.rb  payment_received_consumer.rb
backend/app/models/: customer.rb  payment.rb  payment_account.rb  short_message.rb
backend/app/services/: payment_creation_service.rb  send_sms_payment_confirmation_service.rb
backend/config/: credentials.yml.enc
backend/db/: schema.rb
backend/db/migrate/: 20231228200310_create_payment_accounts.rb  20231228200428_create_payments.rb  20240103084721_create_short_messages.rb  20240103084843_adds_fields_to_short_messages.rb
backend/test/fixtures/: payment_accounts.yml  payments.yml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/home/: index.js
payments_aggregator/: kafka-docker.yml  kafka.py  main.py  models.py  pyproject.toml
